# airbyte

airbyte-integrations/connectors/source-xero-dolead/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-xero-dolead/integration_tests/: configured_catalog.json  configured_catalog_full.json  sample_state.json
airbyte-integrations/connectors/source-xero-dolead/source_xero_dolead/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-xero-dolead/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
